Check in  Apex class and Custom field

--- a/force-app/main/default/layouts/Case-Case Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Case-Case Layout.layout-meta.xml
@@ -84,11 +84,11 @@
             </layoutItems>
             <layoutItems>
                 <behavior>Edit</behavior>
-                <field>testfield__c</field>
+                <field>test0504__c</field>
             </layoutItems>
             <layoutItems>
                 <behavior>Edit</behavior>
-                <field>test0504__c</field>
+                <field>DemoDevOpsCheckin__c</field>
             </layoutItems>
         </layoutColumns>
         <layoutColumns>
